# RaindropAgent

./: .gitignore  CLAUDE.md  DIAGRAMS.md  NEW_PROJECT_SETUP.md  PROJECT SPEC.md  QUICK_REFERENCE.md  README.md  TODOS.md  pyproject.toml  secrets_template.json
diagrams/Documents/: diagram_mappings.json  index.html
src/raindrop_cleanup/: __main__.py
